--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
             <div class="section-header d-flex flex-wrap justify-content-between my-4">
               
-              <h2 class="section-title">Best selling products</h2>
+              <h2 class="section-title">Highest selling products</h2>
 
               <div class="d-flex align-items-center">
                 <a href="#" class="btn btn-primary rounded-1">View All</a>
