--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
           <div class="col-md-12">
 
             <div class="section-header d-flex flex-wrap justify-content-between mb-5">
-              <h2 class="section-title">Categorie</h2>
+              <h2 class="section-title">Categories</h2>
 
               <div class="d-flex align-items-center">
                 <a href="#" class="btn btn-primary me-2">View All</a>
