--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                     </a>
                   </figure>
                   <div class="d-flex flex-column text-center">
-                    <h3 class="fs-6 fw-normal">Fresh Salmon</h3>
+                    <h3 class="fs-6 fw-normal">Salman Khan</h3>
                     <div>
                       <span class="rating">
                         <svg width="18" height="18" class="text-warning"><use xlink:href="#star-full"></use></svg>
