--- a/index.html
+++ b/index.html
@@ -1648,7 +1648,7 @@
 
             <div class="section-header d-flex justify-content-between my-4">
               
-              <h2 class="section-title">Just arrived</h2>
+              <h2 class="section-title">Abhi aye he</h2>
 
               <div class="d-flex align-items-center">
                 <a href="#" class="btn btn-primary me-2">View All</a>
