--- a/index.html
+++ b/index.html
@@ -2092,27 +2092,27 @@
               <div class="social-links mt-3">
                 <ul class="d-flex list-unstyled gap-2">
                   <li>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="https://www.facebook.com/" class="btn btn-outline-light">
                       <svg width="16" height="16"><use xlink:href="#facebook"></use></svg>
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="https://x.com/?lang=en" class="btn btn-outline-light">
                       <svg width="16" height="16"><use xlink:href="#twitter"></use></svg>
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="https://www.youtube.com/" class="btn btn-outline-light">
                       <svg width="16" height="16"><use xlink:href="#youtube"></use></svg>
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="https://www.instagram.com/" class="btn btn-outline-light">
                       <svg width="16" height="16"><use xlink:href="#instagram"></use></svg>
                     </a>
                   </li>
                   <li>
-                    <a href="#" class="btn btn-outline-light">
+                    <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwjBz7rbpYmMAxVSSEECHUfUJ7gYABAAGgJ3cw&ae=1&dsh=1&co=1&gclid=CjwKCAjwp8--BhBREiwAj7og14KXurAF7BtEDJoD7KA83SArDl7gE1sVQTeYWVYdQsaaBpGng9wrJhoCDB0QAvD_BwE&ohost=www.google.com&cid=CAESVuD28sLfpbYCZz7ZkhQBIcXJXiiY6mPLxPhZY8Uxvc4ZHeQh-mVTPQLyYxDMAx7G1RP2i254jkAJt_-eXRqzCccJjBrfCY20ixJjYKke0sRgOOxV09T3&sig=AOD64_0pT7UN48ZGyi0QMXupEJExwiXywQ&q&adurl=https://www.amazon.com/?%26tag%3Dgoogleglobalp-20%26ref%3Dpd_sl_7nnedyywlk_e%26adgrpid%3D159651196451%26hvpone%3D%26hvptwo%3D%26hvadid%3D675114638367%26hvpos%3D%26hvnetw%3Dg%26hvrand%3D7886778828559270864%26hvqmt%3De%26hvdev%3Dc%26hvdvcmdl%3D%26hvlocint%3D%26hvlocphy%3D9077149%26hvtargid%3Dkwd-10573980%26hydadcr%3D2246_13468515&ved=2ahUKEwjJu7TbpYmMAxU0_7sIHVdMDIgQ0Qx6BAgJEAE" class="btn btn-outline-light">
                       <svg width="16" height="16"><use xlink:href="#amazon"></use></svg>
                     </a>
                   </li>
